2012-02-12  Ryosuke Niwa  <rniwa@webkit.org>

        Perf-o-matic build fix.

        * Websites/webkit-perf.appspot.com/report_handler.py:
        (ReportHandler.post):

2012-02-10  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION: Perf-o-matic adds duplicated test results
        https://bugs.webkit.org/show_bug.cgi?id=78373

        Reviewed by Hajime Morita.

        Add TestResult inside a transaction. We use high replication databsae but this should prevent
        the duplication in the most of the time.

        Also fixed random bugs in Controller and ReportHandler.

        * Websites/webkit-perf.appspot.com/controller.py:
        (get_persistent_cache):
        * Websites/webkit-perf.appspot.com/report_handler.py:
        (ReportHandler.post):
        * Websites/webkit-perf.appspot.com/report_process_handler.py:
        (ReportProcessHandler.post):
        (ReportProcessHandler._add_test_if_needed):
        (ReportProcessHandler):
        (ReportProcessHandler._add_test_result_if_needed):
        (ReportProcessHandler._add_test_result_if_needed._float_or_none):
        (ReportProcessHandler._add_test_result_if_needed.execute):

2012-02-12  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix GTK+ build after r107454.

        * configure.ac: Disable Mutation observers build on GTK+ until it
        can actually build.

2012-02-10  Adam Klein  <adamk@chromium.org>

        Enable MUTATION_OBSERVERS by default on all platforms
        https://bugs.webkit.org/show_bug.cgi?id=78196

        Reviewed by Ojan Vafai.

        * configure.ac:

2012-02-10  Ryosuke Niwa  <rniwa@webkit.org>

        Perf-o-matic build fix after r107386.

        * Websites/webkit-perf.appspot.com/app.yaml:
        * Websites/webkit-perf.appspot.com/controller.py:
        (schedule_manifest_update):
        (schedule_dashboard_update):
        (schedule_runs_update):
        * Websites/webkit-perf.appspot.com/merge_tests_handler.py: